# mafat-challenge-retrieval

./: .gitignore  README.md  eval.py  model.py  model_bl.py  pyproject.toml
