[project]
name = "mafat-challenge-retrieval"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
    "numpy==1.24.4",
    "scikit-learn>=1.2.0",
    "scipy>=1.3.2",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "transformers>=4.42.0",
]

[dependency-groups]
dev = [
    "typer>=0.16.1",
]
